5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4080/executions/1578_1331.log
== TEST (2019-03-13 13:24:28) 
-- CODE:
print(50 / 3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:25:39) 
-- CODE:
print(round(50 / 3)resto(50%48))
-- ERROR:
File "XXXX", line 1
    print(round(50 / 3)resto(50%48))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:25:58) 
-- CODE:
print(round(50 / 3)
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:26:30) 
-- CODE:
print(divisao, 50 / 3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(divisao, 50 / 3)
NameError: name 'divisao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:27:28) 
-- CODE:
print(50 / 3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:29:08) 
-- CODE:
print(50 / 3 ),(50%48)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:29:17) 
-- CODE:
print(50 / 3 ),(50 % 48)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:29:48) 
-- CODE:
print(50 / 3 ),(50 % 48)
print(50%48)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:30:16) 
-- CODE:
print(50 / 3 % 50 ),(50 % 48)
print(50%48)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:30:31) 
-- CODE:
print(50 / 3 % )
print(50%48)
-- ERROR:
File "XXXX", line 1
    print(50 / 3 % )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:30:47) 
-- CODE:
print(50 / 3 )
print(50%48)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:30:53) 
-- CODE:
print(50 / 3 )
print(50%48)
-- EXECUTION TIME:
0.184411
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:03:38) 
-- CODE:
print(50 / 3 )
print(2)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:03:41) 
-- CODE:
print(50 / 3 )
print(2)
-- EXECUTION TIME:
0.263669
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:04:20) 
-- CODE:
print(50//3 )
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:04:21) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.193915
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:43:36) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.146948
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:18:57) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.208619
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 13:51:07) 
-- CODE:
print(50//3 )
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:51:12) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.160575
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:51) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.13476
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:53) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.214081
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:54) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.20502
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:55) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.157087
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:55) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.107501
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1331/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:56) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.102196
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:56) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.162992
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 13:56:56) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.105535
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:01:07) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.171072
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:01:14) 
-- CODE:
print(50//3 )
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:01:31) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.257153
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:03:05) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.139281
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:03:06) 
-- CODE:
print(50//3 )
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:03:07) 
-- CODE:
print(50//3 )
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:03:07) 
-- CODE:
print(50//3 )
print(2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:03:07) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.130941
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 14:05:46) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.180704
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 15:14:58) 
-- CODE:
print(50//3 )
print(2)
-- EXECUTION TIME:
0.116036
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 13:04:02) 
-- CODE:
print(50//3 )
print(50 % 3)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 13:04:11) 
-- CODE:
print(50//3 )
print(50 % 3)
-- EXECUTION TIME:
0.170725
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
